Don't restore focus to contentItem when a focusless popup was closed

For example, a ToolTip shouldn't affect focus when it closes.

Task-number: QTBUG-53420
Task-number: QTBUG-53451
Change-Id: Ic945e98a2ffd86e9f9f06724b16e5f240c3f94de
Reviewed-by: Liang Qi <liang.qi@qt.io>