src/quicktemplates2/qquickpopup_p_p.h
@@ -190,6 +190,7 @@ public:
     bool hasBottomMargin;
     bool allowVerticalFlip;
     bool allowHorizontalFlip;
+    bool hadActiveFocusBeforeExitTransition;
     qreal x;
     qreal y;
     qreal effectiveX;
